# Arhiva-probleme-pbinfo

./: CMakeLists.txt  README.md  main.cpp  script.cpp  script.h
